# dsp_guide

./: CMakeLists.txt  README.md
docs/: ALGORITHMS.md
include/: common.h  dsp.h
include/adaptive/: adaptive.h  kalman.h
include/array/: array.h
include/coding/: correct.h  detect.h  equalize.h  interleave.h  ldpc.h
include/filtering/: fir.h  iir.h
include/image/: filter2d.h  image.h  image_all.h  imageops.h  transform2d.h
include/modulation/: channel.h  coded_ofdm.h  ofdm.h  pulse.h  qam.h  sync.h
include/operations/: convolution.h  correlation.h
include/sampling/: resample.h
include/spectral/: cepstrum.h  estimation.h  timefreq.h  window.h
include/transforms/: dct.h  dft.h  fft.h  hilbert.h
include/wavelet/: wavelet.h
src/: main.c
src/adaptive/: adaptive.c  kalman.c
src/array/: array.c
src/coding/: convolutional.c  detect.c  equalize.c  hamming.c  interleave.c  ldpc_build.c  ldpc_decode.c  reed_solomon.c
src/filtering/: fir.c  iir.c
src/image/: filter2d.c  image.c  imageops.c  transform2d.c
src/modulation/: channel.c  coded_ofdm.c  ofdm.c  pulse.c  qam.c  sync.c
src/operations/: convolution.c  correlation.c
src/sampling/: resample.c
src/spectral/: cepstrum.c  estimation.c  timefreq.c  window.c
src/transforms/: dct.c  dft.c  fft.c  hilbert.c
src/wavelet/: wavelet.c
tests/: test_all.c
